--- a/.env
+++ b/.env
@@ -21,7 +21,7 @@ APP_SECRET=ff895b20fbd66dbd2d5ddfbea7711be8
 ###< symfony/framework-bundle ###
 
 ###> symfony/mailer ###
-# MAILER_DSN=smtp://localhost
+#MAILER_DSN=smtp://localhost:1025
 ###< symfony/mailer ###
 
 ###> doctrine/doctrine-bundle ###
@@ -31,3 +31,13 @@ APP_SECRET=ff895b20fbd66dbd2d5ddfbea7711be8
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 DATABASE_URL=mysql://root:root@127.0.0.1:3306/entreprise_garcia
 ###< doctrine/doctrine-bundle ###
+
+
+
+
+###> symfony/swiftmailer-bundle ###
+# For Gmail as a transport, use: "gmail://username:password@localhost"
+# For a generic SMTP server, use: "smtp://localhost:25?encryption=&auth_mode="
+# Delivery is disabled by default via "null://localhost"
+MAILER_URL=null://127.0.0.1:1080
+###< symfony/swiftmailer-bundle ###
