--- a/.env
+++ b/.env
@@ -39,5 +39,10 @@ DATABASE_URL=mysql://root:root@127.0.0.1:3306/entreprise_garcia
 # For Gmail as a transport, use: "gmail://username:password@localhost"
 # For a generic SMTP server, use: "smtp://localhost:25?encryption=&auth_mode="
 # Delivery is disabled by default via "null://localhost"
-MAILER_URL=null://127.0.0.1:1080
+MAILER_URL=gmail://guillaume.gomez@lapiscine.pro:ritpan-fimte2-kAtxok@localhost
 ###< symfony/swiftmailer-bundle ###
+
+###> symfony/google-mailer ###
+# Gmail SHOULD NOT be used on production, use it in development only.
+# MAILER_DSN=gmail://USERNAME:PASSWORD@localhost
+###< symfony/google-mailer ###
