--- a/.env
+++ b/.env
@@ -29,7 +29,7 @@ APP_SECRET=ff895b20fbd66dbd2d5ddfbea7711be8
 # For an SQLite database, use: "sqlite:///%kernel.project_dir%/var/data.db"
 # For a PostgreSQL database, use: "postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=11&charset=utf8"
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
-DATABASE_URL=mysql://root:root@127.0.0.1:3306/entreprise_garcia
+DATABASE_URL=mysql://gogu9355_entreprise_garcia:cRRqRIuSxJh2t8ieRE@gogu9355_entreprise_garcia.mysql.db:3306/gogu9355_entreprise_garcia?serverVersion=5.6
 ###< doctrine/doctrine-bundle ###
 
 
