--- a/.env
+++ b/.env
@@ -14,7 +14,8 @@
 # https://symfony.com/doc/current/best_practices.html#use-environment-variables-for-infrastructure-configuration
 
 ###> symfony/framework-bundle ###
-APP_ENV=dev
+APP_ENV=prod
+##APP_ENV=dev
 APP_SECRET=ff895b20fbd66dbd2d5ddfbea7711be8
 #TRUSTED_PROXIES=127.0.0.0/8,10.0.0.0/8,172.16.0.0/12,192.168.0.0/16
 #TRUSTED_HOSTS='^(localhost|example\.com)$'
@@ -29,9 +30,10 @@ APP_SECRET=ff895b20fbd66dbd2d5ddfbea7711be8
 # For an SQLite database, use: "sqlite:///%kernel.project_dir%/var/data.db"
 # For a PostgreSQL database, use: "postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=11&charset=utf8"
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
-DATABASE_URL=mysql://gogu9355_entreprise_garcia:cRRqRIuSxJh2t8ieRE@gogu9355_entreprise_garcia.mysql.db:3306/gogu9355_entreprise_garcia?serverVersion=5.6
+#DATABASE_URL=mysql://gogu9355_entreprise_garcia:cRRqRIuSxJh2t8ieRE@gogu9355_entreprise_garcia.mysql.db:3306/gogu9355_entreprise_garcia?serverVersion=5.6
 ###< doctrine/doctrine-bundle ###
-
+#ROMAIN#DATABASE_URL=mysql://gogu9355_entreprise_garcia:root@localhost:3306/gogu9355_entreprise_garcia?serverVersion=5.6
+DATABASE_URL=mysql://crokizddata:cRRqRIuSxJh2t8ieRE@crokizddata.mysql.db:3306/crokizddata?serverVersion=5.6
 
 
 
