--- a/.env
+++ b/.env
@@ -32,7 +32,7 @@ APP_SECRET=ff895b20fbd66dbd2d5ddfbea7711be8
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 #DATABASE_URL=mysql://gogu9355_entreprise_garcia:cRRqRIuSxJh2t8ieRE@gogu9355_entreprise_garcia.mysql.db:3306/gogu9355_entreprise_garcia?serverVersion=5.6
 ###< doctrine/doctrine-bundle ###
-DATABASE_URL=mysql://gogu9355_entreprise_garcia:root@localhost:3306/gogu9355_entreprise_garcia?serverVersion=5.6
+DATABASE_URL=mysql://gogu9355_entreprise_garcia:cRRqRIuSxJh2t8ieR@localhost:3306/gogu9355_entreprise_garcia?serverVersion=5.6
 #DATABASE_URL=mysql://crokizddata:cRRqRIuSxJh2t8ieRE@crokizddata.mysql.db:3306/crokizddata?serverVersion=5.6
 
 
