--- a/.env
+++ b/.env
@@ -15,7 +15,7 @@
 
 ###> symfony/framework-bundle ###
 #APP_ENV=prod
-APP_ENV=dev
+APP_ENV=prod
 APP_SECRET=ff895b20fbd66dbd2d5ddfbea7711be8
 #TRUSTED_PROXIES=127.0.0.0/8,10.0.0.0/8,172.16.0.0/12,192.168.0.0/16
 #TRUSTED_HOSTS='^(localhost|example\.com)$'
