--- a/.env
+++ b/.env
@@ -40,7 +40,7 @@ DATABASE_URL=mysql://gogu9355_entreprise_garcia:opgra1iydJqAGyzmMrR@localhost:33
 # For Gmail as a transport, use: "gmail://username:password@localhost"
 # For a generic SMTP server, use: "smtp://localhost:25?encryption=&auth_mode="
 # Delivery is disabled by default via "null://localhost"
-MAILER_URL=gmail://guillaume.gomez@lapiscine.pro:ritpan-fimte2-kAtxok@localhost
+MAILER_URL=smtp://contact@entreprise-garcia.com:1ERxJqLM0gyV$9zzu8@mail.entreprise-garcia.com:465
 ###< symfony/swiftmailer-bundle ###
 
 ###> symfony/google-mailer ###
