--- a/.env
+++ b/.env
@@ -14,7 +14,6 @@
 # https://symfony.com/doc/current/best_practices.html#use-environment-variables-for-infrastructure-configuration
 
 ###> symfony/framework-bundle ###
-#APP_ENV=prod
 APP_ENV=prod
 APP_SECRET=ff895b20fbd66dbd2d5ddfbea7711be8
 #TRUSTED_PROXIES=127.0.0.0/8,10.0.0.0/8,172.16.0.0/12,192.168.0.0/16
@@ -32,7 +31,7 @@ APP_SECRET=ff895b20fbd66dbd2d5ddfbea7711be8
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 #DATABASE_URL=mysql://gogu9355_entreprise_garcia:cRRqRIuSxJh2t8ieRE@gogu9355_entreprise_garcia.mysql.db:3306/gogu9355_entreprise_garcia?serverVersion=5.6
 ###< doctrine/doctrine-bundle ###
-DATABASE_URL=mysql://gogu9355_entreprise_garcia:opgra1iydJqAGyzmMrR@localhost:3306/gogu9355_entreprise_garcia?serverVersion=5.6
+DATABASE_URL=mysql://gogu9355_entreprise_garcia:opgra1iydJqAGyzmMrR@127.0.0.1:3306/gogu9355_entreprise_garcia?serverVersion=5.6
 
 
 
