--- a/.env
+++ b/.env
@@ -36,10 +36,12 @@ DATABASE_URL=mysql://gogu9355_entreprise_garcia:opgra1iydJqAGyzmMrR@127.0.0.1:33
 
 
 ###> symfony/swiftmailer-bundle ###
+# METTRE GMAIL A LA PLACE DE L'ADRESSE ENTREPRISE
+
 # For Gmail as a transport, use: "gmail://username:password@localhost"
 # For a generic SMTP server, use: "smtp://localhost:25?encryption=&auth_mode="
 # Delivery is disabled by default via "null://localhost"
-MAILER_URL=smtp://contact@entreprise-garcia.com:1ERxJqLM0gyV$9zzu8@mail.entreprise-garcia.com:465
+MAILER_URL=gmail://tomas.garcia318is@gmail.com:1ERxJqLM0gyV$9zzu8@localhost
 ###< symfony/swiftmailer-bundle ###
 
 ###> symfony/google-mailer ###
